--- a/MicServiceDemo/MicServiceWebApi/appsettings.json
+++ b/MicServiceDemo/MicServiceWebApi/appsettings.json
@@ -10,9 +10,9 @@
   "ip": "localhost",
   "port": 44380,
   "weight": 1,
-  //"ConsulAddress": "http://127.0.0.1:8500/",
-  //"ConsulAddress": "http://127.0.0.1:9500/",
-  //"ConsulAddress": "http://127.0.0.1:10500/",
-  "ConsulAddress": "http://127.0.0.1:11500/",
+  //"ConsulAddress": "http://127.0.0.1:8500/",  // Server1
+  //"ConsulAddress": "http://127.0.0.1:9500/",  // Server2
+  //"ConsulAddress": "http://127.0.0.1:10500/", // Server3
+  "ConsulAddress": "http://127.0.0.1:11500/",   // Client1
   "ConsulCenter": "dc1"
 }
